search form and queries

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
                 <img src="static/logo.png" alt="Lazy man's Google">
             </div>
             <div class="search-bar">
-                <form action="/search" method="get">
-                    <input type="search" name="q" autocomplete="false" autofocus>
+                <form action="/dict" method="get">
+                    <input type="search" name="word" autocomplete="false" autofocus>
                     <button type="submit">Goggle Search</button>
                     <button type="submit">I'm Feeling Lucky</button>
                 </form>
